# vk-voxel

./: Cargo.toml
math/src/: arith_traits.rs  lib.rs  matrix.rs  point.rs  vectors.rs
shader/: Cargo.toml
shader-common/: Cargo.toml
shader-common/src/: lib.rs
shader-macro/: Cargo.toml
shader-macro/src/: lib.rs
shader/src/: lib.rs
shaders/: basic.slang
src/: main.rs
vk/: Cargo.toml
vk/src/: core.rs  lib.rs  validation.rs
vk/src/setup/: device.rs  frame.rs  instance.rs  mod.rs  queues.rs  swapchain.rs
