[package]
name = "vk-voxel"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["math", "vk"]

[workspace.dependencies]
thiserror = "2.0.18"
tracing = { version = "0.1.44", features = ["log"] }
math = { path = "./math" }

[dependencies]
vk = { path = "./vk" }
tracing.workspace = true
env_logger = "0.11.10"
